.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ${KUBE_NAMESPACE}
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  type: ClusterIP
